[package]
name = "sdk-compatibility"
version = "0.0.0"
authors = ["Diem Association <opensource@diem.com>"]
repository = "https://github.com/diem/diem"
homepage = "https://diem.com"
license = "Apache-2.0"
publish = false
edition = "2018"

[dependencies]
anyhow = "1"
bcs = "0.1.2"
rand = "0.8.3"
diem-sdk = { path = ".." }
once_cell = "1.7.2"
tokio = { version = "1.6.1", features = ["full"] }

diem-workspace-hack = { path = "../../common/workspace-hack" }
